# log-files-to-mysql

./: CITATION.cff  config apache & nginx.json  config default.json  config nginx.json  config-apache & nginx-2025.json  config-apache & nginx-2026.json  config-default.json  config.json  create_http_logs.sql  files_import.py  files_rotator.py  files_watch.py  pyproject.toml
.github/: APACHE_FORMATS.md  APACHE_NGINX_MAPPING.md  CHANGELOG.md  CONTRIBUTING.md  FILE_BACKUP_SETTINGS.md  INSTALL.md  README.md  README_NGINX.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apis/: color_class.py  device_id.py  properties_app.py  properties_process.py  table_id.py
config/: config_app.py
data/apache_combined/: farmfreshsoftware.access.log-20241007  farmwork.access.log-20241007
data/apache_csv2mysql/: farmfreshsoftware.access.log-20241210  farmfreshsoftware.access.log-20250208  farmfreshsoftware.access.log-20250210  farmfreshsoftware.access.log-20250214  farmfreshsoftware.access.log-20250407  farmfreshsoftware.access.log-20250616  farmfreshsoftware.access.log-20250617  farmfreshsoftware.access.log-20250620  farmfreshsoftware.access.log-20250705  farmfreshsoftware.access.log-20250809  farmfreshsoftware.access.log-20260115  farmwork.access.log-20241210  farmwork.access.log-20241213  farmwork.access.log-20241215  farmwork.access.log-20241228  farmwork.access.log-20250101
src/: main.py
src/factories/: import_processes.py
src/import_processes/: data_enrichment_geoIP.py  data_enrichment_userAgent.py  data_file_loader.py  database_module.py  server_log_file_rotator.py
